1. Revisión de archivos activos Listener adicional: Ahora el linter también se ejecuta cuando cambias de editor activo Re-validación automática: Los archivos se revisan cuando están activos y cada vez que hay cambios 2. Validaciones mejoradas de modelos Python _name o _inherit requerido: Error si un modelo no tiene ninguno de los dos _description requerido: Advertencia si falta este atributo (buena práctica en Odoo) Convención de nombres: Verifica que el nombre del modelo siga el formato modulo.modelo (con puntos) Campos sin string: Información cuando campos (excepto técnicos) no tienen parámetro descriptivo string Reglas de acceso: Mantiene la validación de ir.model.access.csv 3. Validaciones mejoradas de archivos XML Declaración XML: Verifica que tenga <?xml version="1.0" encoding="utf-8"?> Encoding UTF-8: Valida que use el encoding correcto Elemento raíz <odoo>: Error si no existe el elemento raíz IDs duplicados: Detecta IDs duplicados dentro del mismo archivo (error grave) Referencias a modelos: Verifica que los modelos sigan la convención con puntos Declaración en manifest: Mantiene la validación de que el archivo esté en data o demo

--- a/odoo-linter/package.json
+++ b/odoo-linter/package.json
@@ -2,7 +2,10 @@
   "name": "odoo-linter",
   "displayName": "Odoo Linter",
   "description": "A linter for Odoo development in VS Code.",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "repository": {
+    "url": "https://github.com/maikCyphlock/odoo-linter"
+  },
   "engines": {
     "vscode": "^1.83.0"
   },
