--- a/odoo-linter/package.json
+++ b/odoo-linter/package.json
@@ -2,7 +2,7 @@
   "name": "odoo-linter",
   "displayName": "Odoo Linter",
   "description": "A linter for Odoo development in VS Code.",
-  "version": "0.0.2",
+  "version": "0.0.6",
   "repository": {
     "url": "https://github.com/maikCyphlock/odoo-linter"
   },
@@ -27,15 +27,18 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.83.0",
     "@types/mocha": "^10.0.3",
     "@types/node": "18.x",
+    "@types/vscode": "^1.83.0",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
+    "@vscode/test-electron": "^2.3.6",
     "eslint": "^8.52.0",
     "glob": "^10.3.10",
     "mocha": "^10.2.0",
-    "typescript": "^5.2.2",
-    "@vscode/test-electron": "^2.3.6"
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "fast-xml-parser": "^4.5.3"
   }
 }
